// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements/Button Button Groups 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="btn-group btn-group-block"
  >
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      first button
    </button>
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      second button
    </button>
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      third button
    </button>
  </div>
</div>
`;

exports[`Storyshots Elements/Button Disabled 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn"
    disabled={true}
    tabIndex={-1}
    type="button"
  >
    default
  </button>
  <button
    className="btn btn-primary"
    disabled={true}
    tabIndex={-1}
    type="button"
  >
    primary
  </button>
  <button
    className="btn btn-link"
    disabled={true}
    tabIndex={-1}
    type="button"
  >
    link
  </button>
</div>
`;

exports[`Storyshots Elements/Button Loading 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn loading"
    disabled={false}
    type="button"
  >
    default
  </button>
  <button
    className="btn btn-primary loading"
    disabled={false}
    type="button"
  >
    primary
  </button>
  <button
    className="btn btn-link loading"
    disabled={false}
    type="button"
  >
    link
  </button>
</div>
`;

exports[`Storyshots Elements/Button Playground 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Elements/Button Sizes 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn btn-sm"
    disabled={false}
    type="button"
  >
    small
  </button>
  <button
    className="btn"
    disabled={false}
    type="button"
  >
    medium
  </button>
  <button
    className="btn btn-lg"
    disabled={false}
    type="button"
  >
    large
  </button>
  <button
    className="btn btn-block"
    disabled={false}
    type="button"
  >
    block
  </button>
</div>
`;

exports[`Storyshots Elements/Button States 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn btn-success"
    disabled={false}
    type="button"
  >
    success
  </button>
  <button
    className="btn btn-error"
    disabled={false}
    type="button"
  >
    error
  </button>
</div>
`;

exports[`Storyshots Elements/Button Variants 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <button
    className="btn"
    disabled={false}
    type="button"
  >
    default
  </button>
  <button
    className="btn btn-primary"
    disabled={false}
    type="button"
  >
    primary
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    type="button"
  >
    link
  </button>
</div>
`;

exports[`Storyshots Elements/Forms Checkbox 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-checkbox"
    >
      <input
        className="checkbox"
        type="checkbox"
      />
      <i
        className="form-icon"
      />
      Remember me
    </label>
    
  </div>
</div>
`;

exports[`Storyshots Elements/Forms Input 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-label"
      htmlFor="id12"
    >
      Label
    </label>
    <div
      className=""
    >
      <input
        className="form-input"
        id="id12"
        placeholder="Placeholder"
        type="text"
      />
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Forms Radio 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Gender
    </label>
    <label
      className="form-radio"
    >
      <input
        name="gender"
        type="radio"
      />
      <i
        className="form-icon"
      />
      Male
    </label>
    <label
      className="form-radio"
    >
      <input
        name="gender"
        type="radio"
      />
      <i
        className="form-icon"
      />
      Female
    </label>
    
  </div>
</div>
`;

exports[`Storyshots Elements/Forms Sample Form 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <form>
    <fieldset>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="id10"
        >
          Name
        </label>
        <div
          className=""
        >
          <input
            className="form-input"
            id="id10"
            placeholder="Name"
            type="text"
          />
          
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
        >
          Gender
        </label>
        <label
          className="form-radio"
        >
          <input
            name="gender"
            type="radio"
          />
          <i
            className="form-icon"
          />
          Male
        </label>
        <label
          className="form-radio"
        >
          <input
            name="gender"
            type="radio"
          />
          <i
            className="form-icon"
          />
          Female
        </label>
        
      </div>
      <div
        className="form-group"
      >
        
        <select
          className="form-select"
        >
          <option>
            Choose an option
          </option>
          <option>
            Slack
          </option>
          <option>
            Skype
          </option>
          <option>
            Hipchat
          </option>
        </select>
        
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-switch"
        >
          <input
            type="checkbox"
          />
          <i
            className="form-icon"
          />
          Send me emails with news and tips
        </label>
        
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="id11"
        >
          Message
        </label>
        <textarea
          className="form-input"
          id="id11"
          placeholder="Textarea"
          rows={3}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-checkbox"
        >
          <input
            className="checkbox"
            type="checkbox"
          />
          <i
            className="form-icon"
          />
          Remember me
        </label>
        
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Storyshots Elements/Forms Select 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Source
    </label>
    <select
      className="form-select"
    >
      <option>
        Choose an option
      </option>
      <option>
        Slack
      </option>
      <option>
        Skype
      </option>
      <option>
        Hipchat
      </option>
    </select>
    
  </div>
</div>
`;

exports[`Storyshots Elements/Forms Switch 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-switch"
    >
      <input
        type="checkbox"
      />
      <i
        className="form-icon"
      />
      Send me emails with news and tips
    </label>
    
  </div>
</div>
`;

exports[`Storyshots Elements/Forms Text Area 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="form-group"
  >
    <label
      className="form-label"
      htmlFor="id13"
    >
      Message
    </label>
    <textarea
      className="form-input"
      id="id13"
      placeholder="Textarea"
      rows={5}
      type="text"
    />
    
  </div>
</div>
`;

exports[`Storyshots Elements/Table Default 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="table"
  >
    <table
      className="table table-hover table-striped"
    >
      <thead>
        <tr>
          <th>
            Header 1
          </th>
          <th>
            Header 2
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Column 11
          </td>
          <td>
            Column 12
          </td>
        </tr>
        <tr>
          <td>
            Column 21
          </td>
          <td>
            Column 22
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Elements/Table No Data 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="table"
  >
    <table
      className="table table-hover table-striped"
    >
      <thead>
        <tr>
          <th>
            Header 1
          </th>
          <th>
            Header 2
          </th>
        </tr>
      </thead>
    </table>
    <div
      className="sc-gsTCUz cMktrB table-no-data"
    >
      No Data
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Table Play Ground 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="table"
  >
    <table
      className="table table-hover table-striped"
    >
      <thead>
        <tr>
          <th>
            Header 1
          </th>
          <th>
            Header 2
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Column 11
          </td>
          <td>
            Column 12
          </td>
        </tr>
        <tr>
          <td>
            Column 21
          </td>
          <td>
            Column 22
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Examples Input Groups 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="container"
  >
    <div
      className="sc-dlfnbm QflQh columns"
    >
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          
          <input
            className="form-input input-sm"
            placeholder="username"
            type="text"
          />
          <select
            className="form-select select-sm"
          >
            <option>
              Choose an option
            </option>
            <option>
              Slack
            </option>
            <option>
              Skype
            </option>
            <option>
              Hipchat
            </option>
          </select>
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          <span
            className="input-group-addon addon-sm"
          >
            slack.com/
          </span>
          <input
            className="form-input input-sm"
            placeholder="site name"
            type="text"
          />
          <button
            className="btn btn-primary btn-sm input-group-btn"
            disabled={false}
            type="button"
          >
            Submit
          </button>
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          
          <input
            className="form-input"
            placeholder="username"
            type="text"
          />
          <select
            className="form-select"
          >
            <option>
              Choose an option
            </option>
            <option>
              Slack
            </option>
            <option>
              Skype
            </option>
            <option>
              Hipchat
            </option>
          </select>
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          <span
            className="input-group-addon"
          >
            slack.com/
          </span>
          <input
            className="form-input"
            placeholder="site name"
            type="text"
          />
          <button
            className="btn btn-primary input-group-btn"
            disabled={false}
            type="button"
          >
            Submit
          </button>
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          
          <label
            className="form-switch"
          >
            <input
              type="checkbox"
            />
            <i
              className="form-icon"
            />
            
          </label>
          <input
            className="form-input"
            placeholder="name"
            type="text"
          />
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          
          <label
            className="form-checkbox"
          >
            <input
              className="checkbox"
              type="checkbox"
            />
            <i
              className="form-icon"
            />
            
          </label>
          <input
            className="form-input"
            placeholder="name"
            type="text"
          />
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          
          <input
            className="form-input input-lg"
            placeholder="name"
            type="text"
          />
          <select
            className="form-select select-lg"
          >
            <option>
              Choose an option
            </option>
            <option>
              Slack
            </option>
            <option>
              Skype
            </option>
            <option>
              Hipchat
            </option>
          </select>
        </div>
      </div>
      <div
        className="column col-6 col-xs-12"
      >
        <div
          className="input-group"
        >
          <span
            className="input-group-addon addon-lg"
          >
            slack.com/
          </span>
          <input
            className="form-input input-lg"
            placeholder="site name"
            type="text"
          />
          <button
            className="btn btn-primary btn-lg input-group-btn"
            disabled={false}
            type="button"
          >
            Submit
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Examples Playground 1`] = `
<div
  className="sc-bdfBwQ dICnXw"
>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      slack.com/
    </span>
    <input
      className="form-input"
      placeholder="site name"
      type="text"
    />
    <button
      className="btn btn-primary input-group-btn"
      disabled={false}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;
